<resources>
    <string name="app_name">Gestão de Vendas</string>
    <string name="title_activity_formulario_cliente">Novo Cliente</string>
    <string name="title_activity_formulario_fornecedor">Novo Fornecedor</string>
    <string name="title_activity_main">Gestão de Vendas</string>
    <string name="title_activity_formulario_venda">Nova Venda</string>
    <string name="title_activity_formulario_produto">Novo Produto</string>

    <string name="title_fragment_clientes">Clientes</string>
    <string name="title_fragment_fornecedores">Fornecedores</string>
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_produtos">Produtos</string>
    <string name="title_fragment_vendas">Vendas</string>


    <string name="about_info_dev">Developed and Designed By:</string>
    <string name="about_app_name">Gerenciador de Vendas</string>
    <string name="about_dev_name">Raul F. de Melo</string>
    <string name="about_curso_name">Sistemas de Informação</string>
    <string name="about_cod">Código: 816587</string>
    <string name="about_app_version">App Version: 2.0.0</string>
    <string name="about_titulo">Sobre</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="country_prompt">Estado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="produto_tamanho">
        <item>PP</item>
        <item>P</item>
        <item>M</item>
        <item>G</item>
        <item>GG</item>
        <item>XG</item>
        <item>XXG</item>
    </string-array>


</resources>
