<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.unaerp.compras.AboutActivity"
    tools:showIn="@layout/activity_about">
    <LinearLayout
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="300dp">
        <ImageView
            android:src="@drawable/ic_cart_128"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/about_app_name"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/about_app_version"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/about_info_dev"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/about_dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-30dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:text="@string/about_curso_name"
                android:padding="5dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/about_cod"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
